modificaciones al diseo en general

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
               <div class="carousel-item active">
                 <img src="./img/imgrotador-1.jpg" class="d-block w-100" alt="Galletitas Unicornio">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo-large">Galletitas</h5>
+                    <h5 class="indexTitulo">Galletitas</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-3.jpg" class="d-block w-100" alt="Macarrons">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo-xlarge">Macarons</h5>
+                    <h5 class="indexTitulo">Macarons</h5>
                 </div>
                </div>
                <div class="carousel-item">
                 <img src="./img/imgrotador-4.jpg" class="d-block w-100" alt="Torta Roja">
                 <div class="carousel-caption d-block">
-                    <h5 class="indexTitulo-xlarge">Tortas</h5>
+                    <h5 class="indexTitulo">Tortas</h5>
                 </div>
                </div>
             </div>
@@ -90,7 +90,7 @@
         <section class="productosCard">
             <div class="productosCard__box">
                 <picture>
-                    <img class="productosCard__img" src="./img/Macarons.jpg" alt="macarons">
+                    <img class="productosCard__img" src="./img/Macarons.png" alt="macarons">
                 </picture>
                 <div>
                     <a class="button" href="./pages/productos.html"> Macarons
@@ -99,7 +99,7 @@
             </div>
             <div class="productosCard__box">
                 <picture>
-                    <img class="productosCard__img" src="./img/Torta.jpg" alt="tortas">
+                    <img class="productosCard__img" src="./img/Torta.png" alt="tortas">
                 </picture>
                 <div>
                     <a class="button-medio" href="./pages/productos.html"> Tortas
@@ -108,7 +108,7 @@
             </div>
             <div class="productosCard__box">
                 <picture>
-                    <img class="productosCard__img" src="./img/Galletitas.jpg" alt="galletitas">
+                    <img class="productosCard__img" src="./img/Galletitas.png" alt="galletitas">
                 </picture>
                 <div>
                     <a class="button" href="./pages/productos.html">  Galletitas
