--- a/pages/productos.html
+++ b/pages/productos.html
@@ -55,29 +55,29 @@
         <section>
             <div class="productosInternos__Cards">
                 <div>
-                    <img class="productosInternos__Img" src="../img/Macarons-2.jpg" alt="Macarons">
+                    <img class="productosInternos__Img" src="../img/Macarons-2.png" alt="Macarons">
                 </div>
                 <div>
                     <h2 class="productosTexto__Titulos">Macarons</h2>
-                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
+                    <p class="productosTexto__Descripcion">Pequeños "alfajores" realizados con dos tapas de harina de almendras rellenos con ganache de diferentes sabores. Pueden personalizarse al gusto de cada cliente.</p>
                 </div>
             </div>
             <div class="productosInternos__Cards">
                 <div>
                     <h2 class="productosTexto__Titulos">Tortas</h2>
-                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
+                    <p class="productosTexto__Descripcion">El más esponjoso bizcochuelo cubierto con buttercream y dos abundantes capas de relleno. <br>Elegí tu diseño soñado para decorarla.</p>
                 </div>
                 <div>
-                    <img class="productosInternos__Img" src="../img/Torta-2.jpg" alt="Tortas">
+                    <img class="productosInternos__Img" src="../img/Torta-2.png" alt="Tortas">
                 </div>
             </div>
             <div class="productosInternos__Cards">
                 <div>
-                    <img class="productosInternos__Img" src="../img/Galletitas-2.jpg" alt="Galletitas">
+                    <img class="productosInternos__Img" src="../img/Galletitas-2.png" alt="Galletitas">
                 </div>
                 <div>
                     <h2 class="productosTexto__Titulos">Galletitas</h2>
-                    <p class="productosTexto__Descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aliquam itaque doloremque saepe modi, dolorum veniam nihil culpa dignissimos distinctio libero dolorem fugiat quae eaque reiciendis voluptatum magnam natus porro.</p>
+                    <p class="productosTexto__Descripcion">Realizadas en masa de mantequilla y decoradas con glasé de azucar. <br>Números, nombres, personajes, flores y mucho más.</p>
                 </div>
             </div>
         </section>
