mejoras en general para entrega final, agregado de animacion, tx e imgenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,7 +9,6 @@
     <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/translated.css">
     <title>Nosotros</title>
 </head>
@@ -54,11 +53,13 @@
         </div>
         <div class="nosotrosSecciones">
             <div>
-                <h2 class="textoNosotros__Titulo">Un poco sobre nostors</h2>
-                <p class="textoNosotros__Descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus consequatur exercitationem sapiente nam, laboriosam tenetur. Sed ratione temporibus maiores, similique voluptatem incidunt ad tempore dolor laudantium amet. Illum, cumque voluptatum.</p>
+                <h2 class="textoNosotros__Titulo">Un poco sobre nosotros</h2>
+                <p class="textoNosotros__Descripcion">Mi nombre es Luciana, soy Restaurateur y me dedico a la pasteleria freelance desde el 2018. <br>Luego de profundizar mis conocimientos y trabajar en diversos puestos llegué a la conclusión de que emprender en el mundo de la pasteleria era lo mio.<br> Desde entonces tengo el placer de acompañar a cada uno de mis clientes en sus eventos y celebraciones.</p>
             </div>
-            <div class="pasteleraContenedor">
-                <img class="pasteleraImg" src="../img/pastelera.jpeg" alt="pastelera">
+            <div class="pastelera__Contenedor">
+                <div>
+                    <img src="../img/pastelera.png" alt="pastelera" class="pastelera__Img">
+                </div>
             </div>
         </div>
     </main>
