--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -9,7 +9,6 @@
     <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/translated.css">
     <title>Pedidos</title>
 </head>
@@ -53,10 +52,10 @@
                 <h2 class="pedidosTitulo">Pedidos</h2> 
         </div>
         <div class="pedidosSecciones">
-            <h2 class="texto__TituloCentrado">Como hacer tu pedido</h2>
+            <h2 class="texto__TituloCentrado">Cómo hacer tu pedido</h2>
             <p class="texto__Descripcion">Tortas: Envianos una imagen con la referencia del diseño de tu torta o contanos como te gustaría que sea. Decinos de cuantas porciones la necesitas. Por último elegí dos sabores de bizcochuelo (vainilla, vainilla con chips o chocolate) y dos sabores de relleno (chocolate blanco o negro, café, coco y dulce de leche o dulce de leche solo, con chips o con nueces.</p>
-            <p class="texto__Descripcion">Gallettias: mandanos una referencia del diseño o contanos de que te gustaría que sea, elegí el sabor (vainilla o chocolate) y decinos la cantidad (el mínimo son 7 cookies).</p>
-            <p class="texto__Descripcion">Macarrons: elegí el gusto (vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche), elegí el color (pueden ser hasta 2 colores) y por último la cantidad (el mínimo es 7 unidades).</p>
+            <p class="texto__Descripcion">Galletias: mandanos una referencia del diseño o contanos de que te gustaría que sea, elegí el sabor (vainilla o chocolate) y decinos la cantidad (el mínimo son 10 cookies).</p>
+            <p class="texto__Descripcion">Macarons: elegí el gusto (vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche), elegí el color (pueden ser hasta 2 colores) y por último la cantidad (el mínimo es 7 unidades).</p>
         </div>
         <div>
             <h2 class="texto__TituloCentrado">Ejemplos para que te inspires</h2>
