--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,6 @@
     <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas, contacto">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/translated.css">
     <title>Contacto</title>
 </head>
@@ -54,7 +53,7 @@
         </div>
         <div class="contactoSecciones">
             <div>
-                <p class="texto__TituloCentrado">¿Te quedó alguna duda?</p>
+                <p class="texto__TituloCentrado">¿Tenés alguna duda?</p>
             </div>
             <div class="contactoCard">
                 <section>
