--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,7 +9,6 @@
     <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/translated.css">
     <title>Productos</title>
 </head>
@@ -54,9 +53,11 @@
         </div>
         <section>
             <div class="productosInternos__Cards">
-                <div>
-                    <img class="productosInternos__Img" src="../img/Macarons-2.png" alt="Macarons">
-                </div>
+                <picture class="productosInternos__Img">
+                    <source media="(min-width:550px)" srcset="../img/Macarons-2.png">
+                    <source media="(min-width:320px)" srcset="../img/Macarons-3.png">
+                    <img src="../img/Macarons-2.png" alt="Macarons">
+                </picture>
                 <div>
                     <h2 class="productosTexto__Titulos">Macarons</h2>
                     <p class="productosTexto__Descripcion">Pequeños "alfajores" realizados con dos tapas de harina de almendras rellenos con ganache de diferentes sabores. Pueden personalizarse al gusto de cada cliente.</p>
@@ -67,14 +68,18 @@
                     <h2 class="productosTexto__Titulos">Tortas</h2>
                     <p class="productosTexto__Descripcion">El más esponjoso bizcochuelo cubierto con buttercream y dos abundantes capas de relleno. <br>Elegí tu diseño soñado para decorarla.</p>
                 </div>
-                <div>
-                    <img class="productosInternos__Img" src="../img/Torta-2.png" alt="Tortas">
-                </div>
+                <picture class="productosInternos__Img">
+                    <source media="(min-width:550px)" srcset="../img/Torta-2.png">
+                    <source media="(min-width:320px)" srcset="../img/Torta-3.png">
+                    <img src="../img/Torta-2.png" alt="Tortas">
+                </picture>
             </div>
             <div class="productosInternos__Cards">
-                <div>
-                    <img class="productosInternos__Img" src="../img/Galletitas-2.png" alt="Galletitas">
-                </div>
+                <picture class="productosInternos__Img">
+                    <source media="(min-width:550px)" srcset="../img/Galletitas-2.png">
+                    <source media="(min-width:320px)" srcset="../img/Galletitas-3.png">
+                    <img src="../img/Galletitas-2.png" alt="Galletitas">
+                </picture>
                 <div>
                     <h2 class="productosTexto__Titulos">Galletitas</h2>
                     <p class="productosTexto__Descripcion">Realizadas en masa de mantequilla y decoradas con glasé de azucar. <br>Números, nombres, personajes, flores y mucho más.</p>
