--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <meta name="description" content="Pastelería de diseño en la ciudad de Rosario">
     <meta name="keywords"  content="pastelería, rosario, diseño, tortas, galletitas">
     <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/translated.css">
     <title>Ciatti Pasteleria</title>
 </head>
 <body class="grid">
+    <a href="https://walink.co/a67b8a" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 <!-- navigation bar -->
     <header class="header">
         <div>
@@ -89,6 +91,8 @@
         <section class="productosCard">
             <div class="productosCard__box">
                 <picture>
+                    <source media="(min-width:550px)" srcset="./img/Macarons.png">
+                    <source media="(min-width:320px)" srcset="./img/Macarons-4.png">
                     <img class="productosCard__img" src="./img/Macarons.png" alt="macarons">
                 </picture>
                 <div>
@@ -98,6 +102,8 @@
             </div>
             <div class="productosCard__box">
                 <picture>
+                    <source media="(min-width:550px)" srcset="./img/Torta.png">
+                    <source media="(min-width:320px)" srcset="./img/Torta-4.png">
                     <img class="productosCard__img" src="./img/Torta.png" alt="tortas">
                 </picture>
                 <div>
@@ -107,6 +113,8 @@
             </div>
             <div class="productosCard__box">
                 <picture>
+                    <source media="(min-width:550px)" srcset="./img/Galletitas.png">
+                    <source media="(min-width:320px)" srcset="./img/Galletitas-4.png">
                     <img class="productosCard__img" src="./img/Galletitas.png" alt="galletitas">
                 </picture>
                 <div>
