cambios en seccion pedidos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,7 +54,7 @@
         <div class="nosotrosSecciones">
             <div>
                 <h2 class="textoNosotros__Titulo">Un poco sobre nosotros</h2>
-                <p class="textoNosotros__Descripcion">Mi nombre es Luciana, soy Restaurateur y me dedico a la pasteleria freelance desde el 2018. <br>Luego de profundizar mis conocimientos y trabajar en diversos puestos llegué a la conclusión de que emprender en el mundo de la pasteleria era lo mio.<br> Desde entonces tengo el placer de acompañar a cada uno de mis clientes en sus eventos y celebraciones.</p>
+                <p class="textoNosotros__Descripcion">Mi nombre es Luciana, soy Restaurateur y me dedico a la pastelería freelance desde el 2018. <br>Luego de profundizar mis conocimientos y trabajar en diversos puestos, llegué a la conclusión de que emprender en el mundo de la pastelería era lo mío.<br> Desde entonces tengo el placer de acompañar a cada uno de mis clientes en sus eventos y celebraciones.</p>
             </div>
             <div class="pastelera__Contenedor">
                 <div>
