--- a/pages/productos.html
+++ b/pages/productos.html
@@ -82,7 +82,7 @@
                 </picture>
                 <div>
                     <h2 class="productosTexto__Titulos">Galletitas</h2>
-                    <p class="productosTexto__Descripcion">Realizadas en masa de mantequilla y decoradas con glasé de azucar. <br>Números, nombres, personajes, flores y mucho más.</p>
+                    <p class="productosTexto__Descripcion">Realizadas en masa de mantequilla de chocolate o vainilla y decoradas a mano con glasé de azúcar. <br>Números, nombres, personajes, flores y mucho más.</p>
                 </div>
             </div>
         </section>
