--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -51,12 +51,22 @@
         <div class="rotadorInterno__Fondo">
                 <h2 class="pedidosTitulo">Pedidos</h2> 
         </div>
-        
-        <div class="pedidosSecciones">
+        <div>
             <h3 class="texto__TituloCentrado">Cómo hacer tu pedido</h3>
-            <p class="texto__Descripcion">Tortas: Envianos una imagen con la referencia del diseño de tu torta o contanos como te gustaría que sea. Decinos de cuantas porciones la necesitas. Por último elegí dos sabores de bizcochuelo (vainilla, vainilla con chips o chocolate) y dos sabores de relleno (chocolate blanco o negro, café, coco y dulce de leche o dulce de leche solo, con chips o con nueces.</p>
-            <p class="texto__Descripcion">Galletias: mandanos una referencia del diseño o contanos de que te gustaría que sea, elegí el sabor (vainilla o chocolate) y decinos la cantidad (el mínimo son 10 cookies).</p>
-            <p class="texto__Descripcion">Macarons: elegí el gusto (vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche), elegí el color (pueden ser hasta 2 colores) y por último la cantidad (el mínimo es 7 unidades).</p>
+        </div>
+        <div class="pedidos">
+            <div class="pedidosSecciones">
+                <h4 class="texto__TituloInterno">Tortas</h4>
+                <p class="texto__Descripcion">Envianos una imagen con la referencia del diseño y decinos de cuantas porciones la necesitas. Elegí dos sabores de bizcochuelo: vainilla, vainilla con chips o chocolate y dos rellenos: chocolate blanco o negro, café, dulce de leche solo, con chips, con coco o con nueces.</p>
+            </div>
+            <div class="pedidosSecciones">
+                <h4 class="texto__TituloInterno">Galletitas</h4>
+                <p class="texto__Descripcion">Mandanos una referencia del diseño o contanos de que te gustarían que sean, elegí el sabor: vainilla o chocolate. Por último decinos la cantidad , el mínimo son 10 cookies.</p>
+            </div>
+            <div class="pedidosSecciones">
+                <h4 class="texto__TituloInterno">Macarons</h4>
+                <p class="texto__Descripcion">Elegí el gusto: vainilla, café, coco y dulce de leche, menta, chocolate blanco o negro o dulce de leche, hasta dos colores diferentes y por último decinos la cantidad, el mínimo es 7 unidades.</p>
+            </div>
         </div>
         <div>
             <h3 class="texto__TituloCentrado">Ejemplos para que te inspires</h3>
